_kube/user/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api-deployment
  namespace: shortener-app
  labels:
    app: user-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-api
  template:
    metadata:
      labels:
        app: user-api
    spec:
      containers:
      - name: user-api-container
        image: jwnheo/user-api:v1
        ports:
        - containerPort: 5000
        # command: ["sh", "-c", "sleep 10; pipenv run python manage.py migrate && pipenv run python manage.py runserver 0.0.0.0:8000"]
