_kube/user/api-network.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: user-api-network
  namespace: shortener-app
spec:
  podSelector:
    matchLabels:
      app: user-api
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgres
      ports:
      - port: 5432
    - to:
        - podSelector:
            matchLabels:
              app: url-api
      ports:
      - port: 5001
