_kube/user/dns-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: user-api-deny-egress
  namespace: shortener-app
spec:
  podSelector:
    matchLabels:
      app: user-api
  policyTypes:
  - Egress
  egress:
  # allow DNS resolution
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
